--- a/package.json
+++ b/package.json
@@ -12,33 +12,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefix": "^1.0.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.1.0",
-    "file-loader": "^4.1.0",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "url-loader": "^2.1.0",
     "vue-loader": "^15.7.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.37.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1"
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
-    "element-ui": "^2.12.0",
-    "express": "^4.17.1",
-    "font-awesome": "^4.7.0",
-    "multer": "^1.4.2",
-    "mysql": "^2.17.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.7",
-    "vuex": "^3.1.1"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   }
 }
